# obs-studio-plugin-onvif-ptz

.github/workflows/: build.yml
plugin/: CMakeLists.txt  my-plugin.c  ptz-core.c  ptz-core.h  ptz-dock.cpp
